--- a/.github/workflows/daily_analysis.yml
+++ b/.github/workflows/daily_analysis.yml
@@ -1,9 +1,9 @@
 name: Daily Stock Analysis
 
 on:
-  #schedule:
-  #  - cron: '0 8 * * 1-5'   # 平日17:00 JST（UTC 8:00, 月〜金）
-  #workflow_dispatch:
+  schedule:
+    - cron: '0 8 * * 1-5'   # 平日17:00 JST（UTC 8:00, 月〜金）
+  workflow_dispatch:
 
 jobs:
   analyze-and-send:
